--- a/e_comm/templates/index.html
+++ b/e_comm/templates/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E Commerce Site</title>
-</head>
-<body>
-    <h1>E commerce Site</h1>
-</body>
-</html>
+{% extends 'utils/base.html' %}
+
+{% block start %}
+
+{% endblock %}
