--- a/e_comm/templates/login.html
+++ b/e_comm/templates/login.html
@@ -6,9 +6,11 @@
         <h1>Login</h1>
         <p>Get access to your Orders, Wishlist and Recommendations</p>
     </div>
-    <form method="GET" id="login-form" class="log-reg-form">
+    <form method="POST" id="login-form" class="log-reg-form">
         {% csrf_token %}
-        <input type="text" name="phone_number" placeholder="Enter Phone Number" required>
+        <input type="email" name="email" placeholder="Enter Email Address" required>
+        <input type="password" name="password" placeholder="Enter Password" required>
+        {% include 'utils/messages.html' %}
         <button type="submit">Request OTP</button>
     </form>
 </div>
